# identity-wallet

./: .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc  .prettierrc.js  .typesafe-i18n.json  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
identity-wallet/: .gitignore  Cargo.toml
identity-wallet/bindings/: AppState.ts  Connection.ts  ConnectionSorting.ts  Connections.ts  CredentialSortMethod.ts  CredentialSorting.ts  CurrentUserPrompt.ts  EventType.ts  HistoryCredential.ts  HistoryEvent.ts  Locale.ts  Profile.ts  ProfileSettings.ts  SearchResults.ts  SortMethod.ts  SortingPreferences.ts  UserDataQueryResults.ts  theme.ts
identity-wallet/bindings/actions/: Action.ts  AddRecent.ts  AddRecentSearch.ts  AddTrustListEntry.ts  CancelUserFlow.ts  ConnectionAccepted.ts  CreateNew.ts  CredentialOffersSelected.ts  DeleteCredential.ts  DeleteRecentSearch.ts  DeleteTrustListEntry.ts  DevProfile.ts  DevProfileType.ts  EditTrustListEntry.ts  GetState.ts  LoadDevProfile.ts  ProduceDid.ts  QrCodeScanned.ts  SearchQuery.ts  SetDefaultDidMethod.ts  SetDevMode.ts  SetDevProfile.ts  SetPreferredDidMethod.ts  SetPreferredKeyType.ts  Test.ts  ToggleTrustListEntry.ts  TrustListAdd.ts  TrustListDefault.ts  TrustListDelete.ts  TrustListEdit.ts  TrustListReset.ts  TrustListToggle.ts  TrustListsAdd.ts  TrustListsDelete.ts  TrustListsReset.ts  UnlockStorage.ts  UpdateCredentialMetadata.ts  UpdateProfileSettings.ts  UpdateSortingPreference.ts  UserDataQuery.ts
identity-wallet/bindings/connections/: Connection.ts
identity-wallet/bindings/credentials/: CredentialMetadata.ts  DisplayCredential.ts
identity-wallet/bindings/dev/: ProfileSteps.ts  ProfileType.ts
identity-wallet/bindings/dev_mode/: DevMode.ts
identity-wallet/bindings/display-credential/: CredentialMetadata.ts  CredentialType.ts  DisplayCredential.ts
identity-wallet/bindings/profile_settings/: ConnectionSortMethod.ts  Preferences.ts  Profile.ts  ProfileSettings.ts  SortingPreferences.ts
identity-wallet/bindings/trust_list/: TrustList.ts  TrustLists.ts
identity-wallet/bindings/user_prompt/: CurrentUserPrompt.ts  LinkedVerifiableCredentialData.ts  ValidationResult.ts  ValidationStatus.ts
identity-wallet/resources/: default_trust_list.json  drivers-license-credential-subject.json  journey-definition.json  ngdil.json  onboarding-2.json  onboarding.json
identity-wallet/src/: command.rs  date_utils.rs  error.rs  lib.rs  persistence.rs  stronghold.rs  subject.rs  utils.rs  verifiable_credential_record.rs
identity-wallet/src/crypto/: stronghold.rs
identity-wallet/src/state/: actions.rs  history.rs  history_event.rs  mod.rs  persistence.rs  subject.rs  user_prompt.rs
identity-wallet/src/state/actions/: actions.rs  cancel_user_flow.rs  cancel_user_journey.rs  connection_accepted.rs  create_new.rs  credential_offers_selected.rs  credentials_selected.rs  get_state.rs  load_dev_profile.rs  mod.rs  qr_code_scanned.rs  reset.rs  set_dev_mode.rs  set_locale.rs  toggle_dev_settings.rs  unlock_storage.rs  update_credential_metadata.rs  update_profile_settings.rs  user_data_query.rs
identity-wallet/src/state/boot/: actions.rs  mod.rs  reducers.rs
identity-wallet/src/state/common/: actions.rs  cancel_user_flow.rs  get_state.rs  mod.rs  reducers.rs  reset.rs  unlock_storage.rs
identity-wallet/src/state/connections/: actions.rs  connection_accepted.rs  mod.rs  reducers.rs
identity-wallet/src/state/core_utils/: helpers.rs  history_event.rs  mod.rs
identity-wallet/src/state/credentials/: actions.rs  credential_offers_selected.rs  credentials_selected.rs  mod.rs  reducers.rs  update_credential_metadata.rs  verifiable_credential_record.rs
src-tauri/: .gitignore  .snapshot  1.mermaid  Cargo.toml  Info.plist  flowchart.pest  tauri.conf.json
src-tauri/bindings/: Action.ts  ActionType.ts  AppState.ts  ClaimType.ts  CommandMessage.ts  Connection.ts  CurrentUserPrompt.ts  Profile.ts  QueryTarget.ts  SortMethod.ts  StateStatus.ts  TransferState.ts  UserDataQuery.ts
src-tauri/bindings/display-credential/: CredentialDisplay.ts  CredentialMetadata.ts  DisplayCredential.ts
src-tauri/bindings/user-flow/: CurrentUserFlow.ts  CurrentUserFlowType.ts  Offer.ts  Redirect.ts  Selection.ts  Warning.ts
src-tauri/bindings/user-prompt/: AcceptConnection.ts  CredentialOffer.ts  CurrentUserPrompt.ts  CurrentUserPromptType.ts  Offer.ts  PasswordRequired.ts  Redirect.ts  Selection.ts  ShareCredentials.ts  Warning.ts
src-tauri/icons/: icon.icns
src-tauri/identity_wallet/: Cargo.toml
src-tauri/identity_wallet/bindings/: Action.ts  AppState.ts  UserDataQuery.ts
src-tauri/identity_wallet/src/: command.rs  lib.rs  utils.rs  verifiable_credential_record.rs
src-tauri/resources/: journey-definition.json  ngdil.json
src-tauri/src/: command.rs  error.rs  lib.rs  main.rs  provider.rs  state.rs  utils.rs  verifiable_credential_record.rs
src-tauri/src/clients/: iota.rs
src-tauri/src/crypto/: mod.rs  stronghold.rs
src-tauri/src/did/: did_key.rs  mod.rs  persistence.rs
src-tauri/src/state/: actions.rs  mod.rs  persistence.rs  reducers.rs  state.rs  user_flow.rs  user_prompt.rs
src-tauri/src/tests/: load_dev_profile.rs  mod.rs  qr_code_scanned.rs
src-tauri/tests/: README.md  mod.rs
src-tauri/tests/common/: assert_state_update.rs  mod.rs
src-tauri/tests/tests/: credential_offer.rs  get_state.rs  load_dev_profile.rs  mod.rs  qr_code_scanned.rs  user_data_query.rs  utils.rs
unime/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
unime/src-tauri/android-build/: android-init.sh  build.gradle.kts  key.properties  upload-keystore.jks
unime/src-tauri/capabilities/: main.json  mobile.json
unime/src-tauri/gen-static/: apply.sh
unime/src-tauri/icons/: icon.icns
unime/src-tauri/resources/: journey-definition.json  ngdil.json  onboarding-2.json  onboarding.json
unime/src-tauri/src/: lib.rs  main.rs
unime/src-tauri/tests/: mod.rs
(+885 files in other folders)
