[workspace]
resolver = "2"
members = ["identity-wallet", "unime/src-tauri"]

[workspace.dependencies]
tauri = { version = "=2.0.0-beta.19", features = [
    "protocol-asset",
    "rustls-tls",
] }

did_manager = { git = "https://github.com/impierce/did-manager.git", rev = "d32ed05" }
indoc = "2.0"
jsonwebtoken = "9.3"
log = "^0.4"
rand = "0.8"
serde_json = "1.0"
serial_test = "2.0"
tempfile = "3.5.0"
oid4vc = { git = "https://git@github.com/impierce/openid4vc.git", rev = "274a3e9" }
wiremock = "0.5"

[workspace.package]
name = "unime"
version = "0.5.1"
description = "Identity Wallet for people to manage Decentralized Identities and Verifiable Credentials"
homepage = "https://www.impierce.com/"
authors = ["Impierce Technologies"]
keywords = ["identity", "did", "ssi", "wallet", "siopv2"]
license = "Apache-2.0"
repository = "https://github.com/impierce/identity-wallet"
edition = "2021"
rust-version = "1.75.0"
