[workspace]
resolver = "2"
members = ["identity-wallet", "unime/src-tauri"]

[workspace.dependencies]
# All Tauri related dependencies. These dependencies are deliberately pinned to specific versions to ensure
# compatibility.
# The dependency versions related to the current `tauri` version "2.0.0-beta.24" can be found here:
# - https://github.com/tauri-apps/tauri/blob/6d965e9fbf57323b1ba25faa68b4d0b7df4f07db/core/tauri/Cargo.toml#L3
# - https://github.com/tauri-apps/tauri/blob/6d965e9fbf57323b1ba25faa68b4d0b7df4f07db/core/tauri/Cargo.toml#L54-L57
#
# The dependency versions related to the current `tauri-build` version "2.0.0-beta.19" can be found here:
# - https://github.com/tauri-apps/tauri/blob/6d965e9fbf57323b1ba25faa68b4d0b7df4f07db/core/tauri-build/Cargo.toml#L3
# - https://github.com/tauri-apps/tauri/blob/6d965e9fbf57323b1ba25faa68b4d0b7df4f07db/core/tauri-build/Cargo.toml#L31-L32
# - https://github.com/tauri-apps/tauri/blob/6d965e9fbf57323b1ba25faa68b4d0b7df4f07db/core/tauri-build/Cargo.toml#L39
tauri = { version = "=2.0.0-beta.24", features = [
    "protocol-asset",
    "rustls-tls",
] }
tauri-codegen = { version = "=2.0.0-beta.19" }
tauri-build = { version = "=2.0.0-beta.19", default-features = false}
tauri-macros = { version = "=2.0.0-beta.19" }
tauri-runtime = { version = "=2.0.0-beta.20" }
tauri-runtime-wry = { version = "=2.0.0-beta.20" }
tauri-utils = { version = "=2.0.0-beta.19", features = [ "resources" ] }
tauri-winres = "=0.1"

agent_shared = { git = "https://git@github.com/impierce/ssi-agent.git", rev = "1823810" }
did_manager = { git = "https://git@github.com/impierce/did-manager.git", tag = "v1.0.0-beta.3" }
jsonwebtoken = "9.3"
log = "^0.4"
oid4vc = { git = "https://git@github.com/impierce/openid4vc.git", rev = "d095db0" }
rand = "0.8"
serde_json = "1.0"
serial_test = "2.0"
tempfile = "3.5.0"
wiremock = "0.5"

[workspace.package]
name = "unime"
version = "0.6.13"
description = "Identity Wallet for people to manage Decentralized Identities and Verifiable Credentials"
homepage = "https://www.impierce.com/"
authors = ["Impierce Technologies"]
keywords = ["identity", "did", "ssi", "wallet", "siopv2"]
license = "Apache-2.0"
repository = "https://github.com/impierce/identity-wallet"
edition = "2021"
rust-version = "1.76.0"
