[package]
name = "identity-wallet"
version = "0.5.1"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
tauri.workspace = true
oid4vc.workspace = true
log.workspace = true
serde_json.workspace = true
did_manager.workspace = true

identity_credential = { version = "1.2.0", default-features = false, features = [
    "credential",
    "domain-linkage-fetch",
    "presentation",
    "validator",
] }
identity_eddsa_verifier = { version = "1.2.0" }
identity_iota = { version = "1.2.0" }
iota_stronghold = { version = "=2.0.0" }
stronghold_engine = "=2.0.0"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
derivative = "2.2"
downcast-rs = "1.2"
futures = "0.3"
itertools = "0.10.5"
jsonwebtoken = "8.2"
lazy_static = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.4"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.26.0", features = ["macros"] }
ts-rs = "7.0"
typetag = "0.2"
dyn-clone = "1.0"
icu = "1.4.0"
unicode-normalization = "0.1.23"
url = "2.5"
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
rand.workspace = true
wiremock.workspace = true
serial_test.workspace = true
tempfile.workspace = true
tauri = { version = "=2.0.0-beta.19", features = ["rustls-tls", "test"] }
