[package]
name = "identity-wallet"
version = "0.6.8"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
tauri.workspace = true

anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
derivative = "2.2"
did_manager.workspace = true
downcast-rs = "1.2"
dyn-clone = "1.0"
futures = "0.3"
icu = "1.4.0"
identity_credential = { version = "1.3", default-features = false, features = [
    "credential",
    "domain-linkage",
    "presentation",
    "validator",
] }
identity_eddsa_verifier = { version = "1.3" }
identity_iota = { version = "1.3" }
iota_stronghold = { version = "2.1" }
itertools = "0.10.5"
jsonwebtoken.workspace = true
lazy_static = "1.4.0"
log.workspace = true
oid4vc.workspace = true
p256 = { version = "0.13", features = ["jwk"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
sha256 = "1.4"
stronghold_engine = { version = "2.0.1" }
stronghold_ext = { git = "https://github.com/tensor-programming/stronghold_ext", features = ["crypto"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.26.0", features = ["macros"] }
ts-rs = "7.0"
typetag = "0.2"
unicode-normalization = "0.1.23"
url = "2.5"
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
ring = "0.17"
serial_test.workspace = true
tempfile.workspace = true
wiremock.workspace = true
