[package]
name = "identity-wallet"
version = "0.1.0"
description = "Identity Wallet for people to manage Decentralized Identities and Verifiable Credentials"
homepage = "https://www.impierce.com/"
authors = ["Impierce Technologies"]
keywords = ["identity", "did", "ssi", "wallet", "siopv2"]
license = "Apache-2.0"
repository = "https://github.com/impierce/identity-wallet"
edition = "2021"

[lib]
name = "identity_wallet"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0-alpha.9", features = [] }

[dependencies]
tauri = { version = "=2.0.0-alpha.15", features = ["rustls-tls"] }
tauri-plugin-barcode-scanner = "=2.0.0-alpha.0"
tauri-plugin-biometric = { git = "https://github.com/crabnebula-dev/plugins-workspace", branch = "feat/biometric-plugin" }
tauri-plugin-clipboard-manager = "=2.0.0-alpha.2"
tauri-plugin-log = { version = "=2.0.0-alpha.2", features = ["colored"] }

oid4vc-manager = { git = "https://git@github.com/impierce/openid4vc.git", rev = "920b5651bd1372728c977c946ef7b8032059cc70" }
siopv2 = { git = "https://git@github.com/impierce/openid4vc.git", rev = "920b5651bd1372728c977c946ef7b8032059cc70" }
oid4vci = { git = "https://git@github.com/impierce/openid4vc.git", rev = "920b5651bd1372728c977c946ef7b8032059cc70" }
oid4vc-core = { git = "https://git@github.com/impierce/openid4vc.git", rev = "920b5651bd1372728c977c946ef7b8032059cc70" }
oid4vp = { git = "https://git@github.com/impierce/openid4vc.git", rev = "920b5651bd1372728c977c946ef7b8032059cc70" }

identity_core = { version = "=0.7.0-alpha.7" }
identity_credential = { git = "https://github.com/iotaledger/identity.rs.git", default-features = false, features = [
    "validator",
    "credential",
    "presentation",
] }
iota_stronghold = { version = "=2.0.0" }
stronghold_engine = "=2.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "^0.4"
tokio = { version = "1.26.0", features = ["macros"] }
ts-rs = "7.0"
anyhow = "1.0"
did-key = "0.2.1"
lazy_static = "1.4.0"
fern = "0.6.0"
rust-argon2 = { version = "=1.0.0" }
base64 = { version = "0.13.0" }
jsonwebtoken = "8.2"
futures = "0.3"
async-recursion = "1.0"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
chrono = "0.4"
sha256 = "1.4"

[dev-dependencies]
tauri = { version = "=2.0.0-alpha.15", features = ["rustls-tls", "test"] }
tempfile = "3.5.0"
serial_test = "2.0"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
url = "2.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
