[package]
name = "unime"
version = "0.1.0"
description = "Identity Wallet for people to manage Decentralized Identities and Verifiable Credentials"
homepage = "https://www.impierce.com/"
authors = ["Impierce Technologies"]
keywords = ["identity", "did", "ssi", "wallet", "siopv2"]
license = "Apache-2.0"
repository = "https://github.com/impierce/identity-wallet"
edition = "2021"

[workspace]
members = [
    "identity_wallet",
]

[workspace.dependencies]
tauri = { version = "=2.0.0-alpha.20", features = [
    "protocol-asset",
    "rustls-tls",
] }

oid4vc-manager = { git = "https://git@github.com/impierce/openid4vc.git", rev = "ebd7a83f8494d55b57f569e43e3001d32cda583a" }
siopv2 = { git = "https://git@github.com/impierce/openid4vc.git", rev = "ebd7a83f8494d55b57f569e43e3001d32cda583a" }
oid4vci = { git = "https://git@github.com/impierce/openid4vc.git", rev = "ebd7a83f8494d55b57f569e43e3001d32cda583a" }
oid4vc-core = { git = "https://git@github.com/impierce/openid4vc.git", rev = "ebd7a83f8494d55b57f569e43e3001d32cda583a" }
oid4vp = { git = "https://git@github.com/impierce/openid4vc.git", rev = "ebd7a83f8494d55b57f569e43e3001d32cda583a" }

log = "^0.4"
serde_json = "1.0"

[lib]
name = "unime"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0-alpha.13", features = [] }

[dependencies]
identity-wallet = { path = "./identity_wallet" }

tauri.workspace = true
tauri-plugin-barcode-scanner = { version = "=2.0.0-alpha.4" }
tauri-plugin-log = { version = "=2.0.0-alpha.6", features = ["colored"] }
tauri-plugin-fs = { version = "=2.0.0-alpha.6" }

dotenvy = { version = "0.15" }
fern = "0.6.0"
log.workspace = true
serde_json.workspace = true

[dev-dependencies]
tauri = { version = "=2.0.0-alpha.20", features = ["rustls-tls", "test"] }

oid4vc-manager.workspace = true
siopv2.workspace = true
oid4vci.workspace = true
oid4vc-core.workspace = true
oid4vp.workspace = true

did-key = "0.2.1"
indoc = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serial_test = "2.0"
tempfile = "3.5.0"
tokio = { version = "1.26.0", features = ["macros"] }
url = "2.4"
wiremock = "0.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
