[package]
name = "identity-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri.workspace = true

oid4vc-manager.workspace = true
siopv2.workspace = true
oid4vci.workspace = true
oid4vc-core.workspace = true
oid4vp.workspace = true

identity_credential = { git = "https://github.com/iotaledger/identity.rs.git", default-features = false, features = [
    "validator",
    "credential",
    "presentation",
] }
iota_stronghold = { version = "=2.0.0" }
stronghold_engine = "=2.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
log.workspace = true
tokio = { version = "1.26.0", features = ["macros"] }
ts-rs = "7.0"
anyhow = "1.0"
did-key = "0.2.1"
lazy_static = "1.4.0"
base64 = { version = "0.13.0" }
jsonwebtoken = "8.2"
async-recursion = "1.0"
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }
chrono = "0.4"
itertools = "0.10.5"
sha256 = "1.4"
derivative = "2.2"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
tauri = { version = "=2.0.0-alpha.20", features = ["rustls-tls", "test"] }
tempfile = "3.5.0"
serial_test = "2.0"
url = "2.4"
indoc = "2.0"
wiremock = "0.5"
rand = "0.8"
