[package]
name = "identity-wallet"
version = "0.4.7"
edition = "2021"

[dependencies]
tauri.workspace = true

oid4vc-manager.workspace = true
siopv2.workspace = true
oid4vci.workspace = true
oid4vc-core.workspace = true
oid4vp.workspace = true

identity_credential = { git = "https://github.com/iotaledger/identity.rs.git", default-features = false, features = [
    "validator",
    "credential",
    "presentation",
] }
iota_stronghold = { version = "=2.0.0" }
stronghold_engine = "=2.0.0"

anyhow = "1.0"
base64 = { version = "0.13.0" }
chrono = "0.4"
derivative = "2.2"
did-key = "0.2.1"
downcast-rs = "1.2"
futures = "0.3"
itertools = "0.10.5"
jsonwebtoken = "8.2"
lazy_static = "1.4.0"
log.workspace = true
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
sha256 = "1.4"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.26.0", features = ["macros"] }
ts-rs = "7.0"
typetag = "0.2"
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
indoc = "2.0"
rand = "0.8"
serial_test = "2.0"
tauri = { version = "=2.0.0-alpha.20", features = ["rustls-tls", "test"] }
tempfile = "3.5.0"
url = "2.4"
wiremock = "0.5"
