[package]
name = "unime"
version = "0.5.1"
description = "Identity Wallet for people to manage Decentralized Identities and Verifiable Credentials"
homepage = "https://www.impierce.com/"
authors = ["Impierce Technologies"]
keywords = ["identity", "did", "ssi", "wallet", "siopv2"]
license = "Apache-2.0"
repository = "https://github.com/impierce/identity-wallet"
edition = "2021"
rust-version = "1.75.0"

[lib]
name = "unime"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0-beta.15", features = [] }

[dependencies]
tauri.workspace = true
oid4vc.workspace = true
log.workspace = true
serde_json.workspace = true

identity-wallet = { path = "../../identity-wallet" }

tauri-plugin-barcode-scanner = { version = "=2.0.0-beta.5" }
tauri-plugin-log = { version = "=2.0.0-beta.4", features = ["colored"] }
tauri-plugin-fs = { version = "=2.0.0-beta.7" }
# TODO: waiting for release (possibly `v2.0.0-beta.6`) that includes issue: https://github.com/tauri-apps/plugins-workspace/pull/1319
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "f0fb25a" }

dotenvy = { version = "0.15" }
fern = "0.6.0"

[dev-dependencies]
did_manager.workspace = true
indoc.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
wiremock.workspace = true
serial_test.workspace = true
tempfile.workspace = true

tauri = { version = "=2.0.0-beta.19", features = ["rustls-tls", "test"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros"] }
url = "2.4"
typetag = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
