[package]
name = "unime"
version = "0.6.12"
description = "Identity Wallet for people to manage Decentralized Identities and Verifiable Credentials"
homepage = "https://www.impierce.com/"
authors = ["Impierce Technologies"]
keywords = ["identity", "did", "ssi", "wallet", "siopv2"]
license = "Apache-2.0"
repository = "https://github.com/impierce/identity-wallet"
edition = "2021"
rust-version.workspace = true

[lib]
name = "unime"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-codegen = { workspace = true, optional = true }
tauri-build.workspace = true
tauri-utils = { workspace = true, features = ["build" ] }
tauri-winres.workspace = true

[dependencies]
tauri.workspace = true
tauri-macros.workspace = true
tauri-runtime.workspace = true
tauri-runtime-wry = { workspace = true, optional = true }
tauri-utils.workspace = true

dotenvy = { version = "0.15" }
fern = "0.6.0"
identity-wallet = { path = "../../identity-wallet" }
log.workspace = true
serde_json.workspace = true
tauri-plugin-barcode-scanner = { version = "=2.0.0-beta.9" }
tauri-plugin-log = { version = "=2.0.0-beta.8", features = ["colored"] }
tauri-plugin-fs = { version = "=2.0.0-beta.11" }
tauri-plugin-shell = { version = "=2.0.0-beta.9" }

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }

did_manager.workspace = true
jsonwebtoken.workspace = true
oid4vc.workspace = true
rand.workspace = true
serde = { version = "1.0", features = ["derive"] }
serial_test.workspace = true
tempfile.workspace = true
tokio = { version = "1.26.0", features = ["macros"] }
typetag = "0.2"
url = "2.4"
wiremock.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
