[package]
name = "credential_issuer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "credential_issuer"
path = "src/main.rs"

[dependencies]
oid4vc-manager = { git = "https://git@github.com/impierce/openid4vc.git", rev = "920b5651bd1372728c977c946ef7b8032059cc70" }
siopv2 = { git = "https://git@github.com/impierce/openid4vc.git", rev = "920b5651bd1372728c977c946ef7b8032059cc70" }
oid4vci = { git = "https://git@github.com/impierce/openid4vc.git", rev = "920b5651bd1372728c977c946ef7b8032059cc70" }
oid4vc-core = { git = "https://git@github.com/impierce/openid4vc.git", rev = "920b5651bd1372728c977c946ef7b8032059cc70" }
oid4vp = { git = "https://git@github.com/impierce/openid4vc.git", rev = "920b5651bd1372728c977c946ef7b8032059cc70" }

tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
did_url = "0.1"
async-trait = "0.1"
lazy_static = "1.4.0"
derivative = "2.2"
anyhow = "1.0"
chrono = "0.4"
did-key = "0.2"
identity_iota = "0.6"
identity_core = { version = "=0.7.0-alpha.7" }
futures = "0.3"
axum = "0.6"
axum-auth = "0.4"
jsonwebtoken = "8.3"
paste = "1.0"
tower-http = { version = "0.4", features = ["cors"]}
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
rand = "0.8"
wiremock = "0.5"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
rstest = "0.18"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
